# jbig2dec

./: CMakeLists.txt  readme.md
